WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
217126
Handle deprecation warnings from libwebrtc headers
https://bugs.webkit.org/show_bug.cgi?id=217126
Summary
Handle deprecation warnings from libwebrtc headers
youenn fablet
Reported
2020-09-30 07:38:03 PDT
Handle deprecation warnings from libwebrtc headers
Attachments
Patch
(5.30 KB, patch)
2020-09-30 07:41 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
A follow-up patch
(1.48 KB, patch)
2020-10-01 11:37 PDT
,
Peng Liu
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2020-09-30 07:38:35 PDT
<
rdar://problem/69747375
>
youenn fablet
Comment 2
2020-09-30 07:41:11 PDT
Created
attachment 410119
[details]
Patch
EWS
Comment 3
2020-09-30 12:06:56 PDT
Committed
r267799
: <
https://trac.webkit.org/changeset/267799
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 410119
[details]
.
Peng Liu
Comment 4
2020-10-01 11:37:43 PDT
Reopening to attach new patch.
Peng Liu
Comment 5
2020-10-01 11:37:44 PDT
Created
attachment 410248
[details]
A follow-up patch
EWS
Comment 6
2020-10-01 15:40:29 PDT
Committed
r267855
: <
https://trac.webkit.org/changeset/267855
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 410248
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug