Handle deprecation warnings from libwebrtc headers https://bugs.webkit.org/show_bug.cgi?id=217126 <rdar://problem/69747375>

Reviewed by Tim Horton.

Disable deprecation warnings coming from libwebrtc headers.

* Modules/mediastream/libwebrtc/LibWebRTCMediaEndpoint.h:
* Modules/mediastream/libwebrtc/LibWebRTCObservers.h:
* Modules/mediastream/libwebrtc/LibWebRTCRtpTransceiverBackend.h:
* Modules/mediastream/libwebrtc/LibWebRTCUtils.cpp:
* platform/mediastream/libwebrtc/LibWebRTCProvider.h:
* testing/MockLibWebRTCPeerConnection.h:


Canonical link: https://commits.webkit.org/229920@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@267799 268f45cc-cd09-0410-ab3c-d52691b4dbfc