Source/WebCore/Modules/mediastream/libwebrtc/LibWebRTCObservers.h
@@ -31,9 +31,11 @@
 #include "LibWebRTCUtils.h"
 
 ALLOW_UNUSED_PARAMETERS_BEGIN
+ALLOW_DEPRECATED_DECLARATIONS_BEGIN
 
 #include <webrtc/api/peer_connection_interface.h>
 
+ALLOW_DEPRECATED_DECLARATIONS_END
 ALLOW_UNUSED_PARAMETERS_END
 
 namespace WebCore {
